Fix for bug #49965 . Let mysqli_options() try to cast option values to the appropriate type.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@290170 c90b9560-bf6c-de11-be94-00142212c4b1